--- a/package.xml
+++ b/package.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0"?>
 <package format="2">
-  <name>cse571_project</name>
+  <name>group_4</name>
   <version>0.0.0</version>
   <description>Project template for CSE 571</description>
 
